<resources>
  <string name="app_name">BasketballStatsKeeper</string>

  <!--  Home Page -->
  <string name="past_games">Past games</string>
  <string name="add_player">Add player</string>
  <string name="start_new_game">Start new game</string>

  <string name="enter_number">Enter number</string>
  <string name="enter_name">Enter name</string>

  <string name="player_added">Player added</string>

  <string name="player_enter_fail">Please enter a name</string>

  <!--  Record Page -->
  <string name="undo">Undo</string>
  <string name="end_game">End game</string>

  <string name="missing_player_toast_text">Please select a player first</string>
  <string name="operation_empty_toast_text">Operation currently empty</string>

  <!--  Record Panel -->
  <string name="plus_one_point">+1 PTS</string>
  <string name="plus_two_points">+2 PTS</string>
  <string name="plus_three_points">+3 PTS</string>
  <string name="miss_one_point">+1 PT MISS</string>
  <string name="miss_two_points">+2 PT MISS</string>
  <string name="miss_three_points">+3 PT MISS</string>
  <string name="plus_rebound">+1 REB</string>
  <string name="plus_assist">+1 AST</string>
  <string name="plus_block">+1 BLK</string>
  <string name="plus_steal">+1 STL</string>
  <string name="plus_turnover">+1 TO</string>

  <string name="remove_this_operation">Remove this operation</string>
  <string name="player_outline">Player outline</string>

  <!--  Display Page -->
  <string name="players">PLAYERS</string>
  <string name="pts">PTS</string>
  <string name="reb">REB</string>
  <string name="ast">AST</string>
  <string name="blk">BLK</string>
  <string name="stl">STL</string>
  <string name="to">TO</string>
  <string name="three_pt">3 PT</string>
  <string name="two_pt">2 PT</string>
  <string name="ft">FT</string>

  <string name="game_stats">GAME STATS</string>
  <string name="appwidget_text">EXAMPLE</string>
  <string name="add_widget">Add widget</string>


  <string name="admob_app_id">ca-app-pub-3936942669570939~3998566240</string>
  <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

  <!--  Notification  -->
  <string name="channel_name">Basketball Stats Keeper Channel</string>
  <string name="channel_description">Track the stats</string>
  <string name="notif_title">Keep tracking</string>
  <string name="notif_text">Start your next game!</string>


  <!--  Debug  -->
  <string name="add_fake_games">Add fake games</string>
  <string name="add_fake_players">Add fake players</string>
  <string name="clear_all_games">Clear all games</string>
  <string name="clear_all_players">Clear all players</string>
</resources>
