<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

  <TextView
      android:id="@+id/pts"
      android:layout_width="@dimen/stat_row_col_width"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/pts"
      tools:text="PTS"
      />

  <TextView
      android:id="@+id/reb"
      android:layout_width="@dimen/stat_row_col_width"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/reb"
      tools:text="REB"
      />

  <TextView
      android:id="@+id/ast"
      android:layout_width="@dimen/stat_row_col_width"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/ast"
      tools:text="AST"
      />

  <TextView
      android:id="@+id/blk"
      android:layout_width="@dimen/stat_row_col_width"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/blk"
      tools:text="BLK"
      />

  <TextView
      android:id="@+id/stl"
      android:layout_width="@dimen/stat_row_col_width"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/stl"
      tools:text="STL"
      />

  <TextView
      android:id="@+id/to"
      android:layout_width="@dimen/stat_row_col_width"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/to"
      tools:text="TO"
      />

  <TextView
      android:id="@+id/twoPT"
      android:layout_width="@dimen/stat_row_col_width_large"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/two_pt"
      tools:text="2 PT"
      />

  <TextView
      android:id="@+id/threePT"
      android:layout_width="@dimen/stat_row_col_width_large"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/three_pt"
      tools:text="3 PT"
      />

  <TextView
      android:id="@+id/onePT"
      android:layout_width="@dimen/stat_row_col_width_large"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/ft"
      tools:text="FT"
      />

</LinearLayout>
