<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

  <EditText
      android:id="@+id/numberEditText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/screen_vertical_margin"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:hint="@string/enter_number"
      android:inputType="number"
      app:layout_constraintBottom_toTopOf="@id/nameEditText"
      app:layout_constraintLeft_toLeftOf="@id/startGameButton"
      app:layout_constraintRight_toRightOf="parent"
      />

  <EditText
      android:id="@+id/nameEditText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/screen_vertical_margin"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:hint="@string/enter_name"
      app:layout_constraintBottom_toTopOf="@id/addPlayerButton"
      app:layout_constraintLeft_toLeftOf="@id/startGameButton"
      app:layout_constraintRight_toRightOf="parent"
      />

  <TextView
      android:id="@+id/pastGamesTitleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/screen_horizontal_margin"
      android:layout_marginTop="@dimen/screen_vertical_margin"
      android:text="@string/past_games"
      android:textSize="@dimen/title_font_size"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/addPlayerButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/screen_vertical_margin"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:text="@string/add_player"
      app:layout_constraintBottom_toTopOf="@id/startGameButton"
      app:layout_constraintEnd_toEndOf="@id/startGameButton"
      app:layout_constraintStart_toStartOf="@id/startGameButton"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/startGameButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/screen_vertical_margin"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:text="@string/start_new_game"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/pastGamesRecycler"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:layout_marginStart="@dimen/screen_horizontal_margin"
      android:layout_marginTop="@dimen/screen_vertical_x_small_margin"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/pastGamesTitleText"
      app:layout_constraintTop_toBottomOf="@id/pastGamesTitleText"
      />

  <com.google.android.gms.ads.AdView
      android:id="@+id/adView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:layout_marginStart="@dimen/screen_horizontal_margin"
      app:adSize="BANNER"
      app:adUnitId="@string/banner_ad_unit_id"
      app:layout_constraintBottom_toBottomOf="@id/startGameButton"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/startGameButton"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/addFakePlayers"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/screen_vertical_margin"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:text="@string/add_fake_players"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@id/clearPlayers"
      app:layout_constraintEnd_toEndOf="@id/adView"
      app:layout_constraintStart_toStartOf="@id/adView"
      tools:visibility="visible"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/clearPlayers"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/screen_vertical_margin"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:text="@string/clear_all_players"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@id/addFakeGames"
      app:layout_constraintEnd_toEndOf="@id/adView"
      app:layout_constraintStart_toStartOf="@id/adView"
      tools:visibility="visible"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/addFakeGames"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/screen_vertical_margin"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:text="@string/add_fake_games"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@id/clearFakeGames"
      app:layout_constraintEnd_toEndOf="@id/adView"
      app:layout_constraintStart_toStartOf="@id/adView"
      tools:visibility="visible"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/clearFakeGames"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/screen_vertical_margin"
      android:layout_marginEnd="@dimen/screen_horizontal_margin"
      android:text="@string/clear_all_games"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@id/adView"
      app:layout_constraintEnd_toEndOf="@id/adView"
      app:layout_constraintStart_toStartOf="@id/adView"
      tools:visibility="visible"
      />

</androidx.constraintlayout.widget.ConstraintLayout>